# VOL-File-encryption

./: CMakeLists.txt  libvol.def  main  main.c  vol.c  vol.h
private/: GUI.c  vol.c  vol.h
private/Helper/: GUI.py
